fixes the prio-btns when a task is edited

--- a/board.html
+++ b/board.html
@@ -191,19 +191,19 @@
           class="w-422 h-51 font20 pad-18-21 custom-border ol-none cursor-p">
         <label for="edit-priority" class="font20 label"><b>Priority</b></label>
         <div class="prio-btn">
-          <button id="editUrgentBtn" onclick="getTaskPrio(this, 'urgent')"
+          <button id="edit-urgent-btn" onclick="getEditTaskPrio(this, 'urgent')"
             class="font20 pad-18-10 urgent-btn custom-border shadow prioBtn" type="button">
             Urgent
-            <img id="editUrgentImg" src="./img/prio_urgent_color.png">
+            <img id="edit-urgent-img" src="./img/prio_urgent_color.png">
           </button>
-          <button id="editMediumBtn" onclick="getTaskPrio(this, 'medium')"
+          <button id="edit-medium-btn" onclick="getEditTaskPrio(this, 'medium')"
             class="font20 pad-18-10 medium-btn custom-border shadow prioBtn" type="button">
             Medium
-            <img id="editMediumImg" src="./img/prio_medium_color.png">
+            <img id="edit-medium-img" src="./img/prio_medium_color.png">
           </button>
-          <button id="editLowBtn" onclick="getTaskPrio(this, 'low')"
+          <button id="edit-low-btn" onclick="getEditTaskPrio(this, 'low')"
             class="font20 pad-18-10 low-btn custom-border shadow prioBtn" type="button">Low
-            <img id="editLowImg" src="./img/prio_low_color.png">
+            <img id="edit-low-img" src="./img/prio_low_color.png">
           </button>
         </div>
         <label for="edit-assigned" class="font20 label">Assigned To</label>
