rewrote edit-menu for edit-task --> Container now opens. Styling and checkboxes are still under construction

--- a/board.html
+++ b/board.html
@@ -207,7 +207,7 @@
           </button>
         </div>
         <label for="edit-assigned" class="font20 label">Assigned To</label>
-        <div onclick="editToggleAssignedMenu()" class="assigned-container font20 cursor-p" id="assigned-container">
+        <div onclick="toggleEditAssignedMenu()" class="assigned-container font20 cursor-p" id="edit-assigned-container">
           <div class="assigned-input" id="editAssignedInput">
             <span>Select contacts to assign</span>
           </div>
@@ -215,7 +215,7 @@
             <button type="button"><img src="./img/arrow_down.png"></button>
           </div>
         </div>
-        <div class="contacts font20 display-none" id="contact-container">
+        <div class="contacts font20 display-none" id="edit-contact-container">
           <ul id="editRenderContacts">
           </ul>
         </div>
