removing include-html

--- a/board.html
+++ b/board.html
@@ -166,7 +166,8 @@
   </form>
   </div>
 
-  <div w3-include-html="./templates/editModal.html"></div>
+  <!-- <div w3-include-html="./templates/editModal.html"></div> -->
+  <div id="templateEditTask"></div>
   
 
   <div id="popUpBoard" class="dNone popUpBoardBackground display-flex justify-content-center align-items-center"></div>
