little responsive for board

--- a/board.html
+++ b/board.html
@@ -187,7 +187,8 @@
         </div>
         <div onclick="openModal(document.querySelector('.modal'))"
           class="addTaskBoardBtn bold px-2 py-2 ms-4 cursorPointer">
-          Add task +
+          <span class="button-add-text">Add task</span>
+          +
         </div>
       </div>
     </div>
