added accept privacy policy checkbox signup

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         <button class="signup-btn" onclick="showSignup();">Sign up</button>
       </div>
       <footer class="footer-container">
-        <a>Privacy Policy</a>
-        <a>Legal Notice</a>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="legal.html">Legal Notice</a>
       </footer>
     </main>
   </body>
