--- a/legal.html
+++ b/legal.html
@@ -40,21 +40,13 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/legal.css" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
+    <script defer src="./scripts/legal.js"></script>
     <script defer src="scripts/storage.js"></script>
     <script defer src="./scripts/utils.js"></script>
     <script defer src="scripts/sidebar.js"></script>
-    <script>
-      function goBack() {
-        window.history.back();
-      }
-      async function initLegal() {
-        userObj = await getLoggedInUser();
-        renderTopLogo(userObj);
-      }
-    </script>
   </head>
 
-  <body onload="includeHTML(); initLegal()">
+  <body onload="initLegal()">
     <div w3-include-html="./templates/sidebar.html"></div>
 
     <div class="legal-notice-section">
