--- a/help.html
+++ b/help.html
@@ -40,21 +40,13 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/help.css" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
+    <script defer src="./scripts/help.js"></script>
     <script defer src="./scripts/utils.js"></script>
     <script defer src="scripts/sidebar.js"></script>
     <script defer src="scripts/storage.js"></script>
-    <script>
-      function goBack() {
-        window.history.back();
-      }
-      async function initHelp() {
-        userObj = await getLoggedInUser();
-        renderTopLogo(userObj);
-      }
-    </script>
   </head>
 
-  <body onload="includeHTML(); initHelp()">
+  <body onload="initHelp()">
     <div w3-include-html="./templates/sidebar.html"></div>
     <div class="help-section">
       <div class="top-section">
