--- a/board.html
+++ b/board.html
@@ -42,7 +42,7 @@
 <body onload="initBoard(); includeHTML(); ">
   <div w3-include-html="./templates/sidebar.html"></div>
 
-  <div class="modal-backdrop modal dNone">
+  <div id="openAddTaskModal" class="modal-backdrop modal dNone">
     <form onsubmit="addTask(); return false" class="popUpBoardTask add-task-form-bord">
       <img src="./img/close.svg" alt="Close Add Task Form" class="boardTaskClose"
         onclick="closeModal(document.querySelector('.modal')); resetPrioButtons();">
@@ -51,7 +51,8 @@
           xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
           <path d="M4.0166 12.1704L10.0166 18.1704L20.0166 6.17041" stroke="white" stroke-width="2"
             stroke-linecap="round" stroke-linejoin="round" />
-        </svg></button>
+        </svg>
+      </button>
 
       <div class="top-section">
 
@@ -160,12 +161,12 @@
           </div>
         </div>
       </div>
-  </div>
-  </form>
+    </form>
   </div>
 
   <!-- <div w3-include-html="./templates/editModal.html"></div> -->
-  <div id="templateEditTask"></div>
+  <div id="templateEditTask">
+  </div>
   
 
   <div id="popUpBoard" class="dNone popUpBoardBackground display-flex justify-content-center align-items-center"></div>
@@ -185,7 +186,7 @@
             <img src="./img/search2.svg" alt="search" />
           </div>
         </div>
-        <div onclick="openModal(document.querySelector('.modal'))"
+        <div onclick="openModal(document.getElementById('openAddTaskModal'))"
           class="addTaskBoardBtn bold px-2 py-2 ms-4 cursorPointer">
           <span class="button-add-text">Add task</span>
           +
