fixed arrow and three dots menu contacts

--- a/contacts.html
+++ b/contacts.html
@@ -70,9 +70,9 @@
         <img src="./img/test_circle.png" alt="" srcset="" />
       </div>
       <form class="dialog__editRightForm" onsubmit="return false;">
-        <input type="text" placeholder="Name" class="dialog__editInput" id="dialog__editNameInput" />
-        <input type="email" placeholder="Email" class="dialog__editInput" id="dialog__editEmailInput" />
-        <input type="number" placeholder="Phone" class="dialog__editInput" id="dialog__editPhoneInput" />
+        <input type="text" placeholder="Name" class="dialog__editInput" id="dialog__editNameInput" maxlength="25"/>
+        <input type="email" placeholder="Email" class="dialog__editInput" id="dialog__editEmailInput" maxlength="25"/>
+        <input type="text" pattern="\d*" placeholder="Phone" class="dialog__editInput" id="dialog__editPhoneInput" maxlength="15"/>
         <div class="dialog__editRightBtn">
           <button class="custom-btn-white btn-hover" id="dialog__editDeleteBtn">
             Delete
@@ -103,9 +103,9 @@
         <img src="./img/create_contact_frame.svg" alt="no user photo" />
       </div>
       <form id="createContactForm" class="dialog__createRightForm" onsubmit="addNewContact(); return false;">
-        <input required minlength="1" type="text" placeholder="Name" class="dialog__createInput" id="dialog__createNameInput" />
-        <input required type="email" placeholder="Email" class="dialog__createInput" id="dialog__createEmailInput" />
-        <input type="number"  placeholder="Phone" class="dialog__createInput" id="dialog__createPhoneInput" />
+        <input required minlength="1" type="text" placeholder="Name" class="dialog__createInput" id="dialog__createNameInput" maxlength="25"/>
+        <input required type="email" placeholder="Email" class="dialog__createInput" id="dialog__createEmailInput" maxlength="25"/>
+        <input type="text" pattern="\d*"  placeholder="Phone" class="dialog__createInput" id="dialog__createPhoneInput" maxlength="15"/>
         <div class="dialog__createRightBtn">
           <button type="button" class="custom-btn-white btn-hover" id="dialog__createDeleteBtn" onclick="cancelCreateContact()">
             Cancel X
