fixed logo dark png to svg

--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,7 @@
   <script defer src="./scripts/authenticate.js"></script>
   <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/storage.js"></script>
-  <link rel="icon" href="./img/logo_dark.png" />
+  <link rel="icon" href="./img/logo_dark.svg" />
   <title>Contacts</title>
 </head>
 
