js-header on board

--- a/board.html
+++ b/board.html
@@ -27,9 +27,12 @@
   <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/storage.js"></script>
   <script defer src="./scripts/boardTouch.js"></script>
+  <script defer src="./scripts/addTask/main.js"></script>
+  <script defer src="./scripts/addTask/contacts.js"></script>
+  <script defer src="./scripts/addTask/dom.js"></script>
+  <script defer src="./scripts/addTask/rendering.js"></script>
+  <script defer src="./scripts/addTask/utilities.js"></script>
   <script defer src="./scripts/templateFunctions/addtask-template.js"></script>
-  <script defer src="./scripts/addtask.js"></script>
-  <script defer src="./scripts/addtask-contact.js"></script>
   <script defer src="./scripts/board.js"></script>
   <script defer src="./scripts/board-edit-task.js"></script>
   <script defer src="./scripts/sidebar.js"></script>
