--- a/board.html
+++ b/board.html
@@ -49,7 +49,7 @@
     <form onsubmit="addTask(); return false" class="popUpBoardTask add-task-form-bord">
       <img src="./img/close.svg" alt="Close Add Task Form" class="boardTaskClose"
         onclick="closeModal(document.querySelector('.modal')); resetPrioButtons();">
-      <button onclick="getAssignedContacts()" type="submit" id="submit-btn-responsive"
+      <button type="submit" id="submit-btn-responsive"
         class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg
           xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
           <path d="M4.0166 12.1704L10.0166 18.1704L20.0166 6.17041" stroke="white" stroke-width="2"
