fixedtouch drag and drop on bottom right of card

--- a/help.html
+++ b/help.html
@@ -167,7 +167,9 @@
               <p class="font16">
                 As the task moves from one stage to another, you can reflect
                 that on the board by dragging and dropping the card from one
-                list to another.
+                list to another. To move cards on your Smartphone you need to
+                drag them at the bottom right handle to move them to another
+                status.
               </p>
             </div>
           </div>
