changed position of add new contact button

--- a/summary.html
+++ b/summary.html
@@ -130,12 +130,7 @@
             </div>
           </div>
           <div class="main-bottom">
-            <div
-              class="to-do custom-border"
-              onclick="redirect('board.html')"
-              onmouseover="whitePencil()"
-              onmouseout="darkPencil()"
-            >
+            <div class="to-do custom-border" onclick="redirect('board.html')">
               <img id="pencil" src="./img/icon_pencil.svg" alt="pencil" />
               <div class="to-do-content">
                 <div class="font-61" id="todo-count">0</div>
