--- a/board.html
+++ b/board.html
@@ -199,7 +199,7 @@
     <div class="gridContainerChildBoard">
       <div class="grid-items">
         <div class="d-flex justify-content-between">
-          <div class="bold boardCategoryHeadline">To do</div>
+          <div class="boardCategoryHeadline bold">To do</div>
           <div class="cursorPointer">
             <svg class="plusButton" onclick="addTaskByStatus('to do')" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M12 8.5V16.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round"/>
