--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               class="input-icons"
             />
           </div>
-          <div class="input-container">
+          <div class="input-container" id="passwordContainer">
             <input
               class="text-input"
               type="password"
