--- a/addtask.html
+++ b/addtask.html
@@ -27,6 +27,7 @@
   <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/addTask/edit-task.js"></script>
   <script defer src="./scripts/addTask/main.js"></script>
+  <script defer src="./scripts/addTask/form-validation.js"></script>
   <script defer src="./scripts/addTask/contacts.js"></script>
   <script defer src="./scripts/addTask/dom.js"></script>
   <script defer src="./scripts/addTask/rendering.js"></script>
@@ -41,7 +42,7 @@
     <div w3-include-html="./templates/sidebar.html"></div>
     <div class="add-task-section">
       <h1 id="addTaskHeadline" class="font61">Add Task</h1>
-      <form onsubmit="addTask(); return false">
+      <form id="task-form">
         <button type="submit" id="submit-btn-responsive"
           class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg
             xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
@@ -51,11 +52,13 @@
         <div class="top-section">
           <div class="top-left">
             <label class="font20 label" for="title">Title</label>
-            <input id="title-input" required class="w-422 h-51 font20 pad-13-21 custom-border ol-none cursor-p"
+            <input id="title-input"  class="w-422 h-51 font20 pad-13-21 custom-border ol-none cursor-p"
               type="text" placeholder="Enter a title" maxlength="25">
+              <div class="error-message d-none">This field is required</div>
             <label class="font20 label" for="description">Description</label>
-            <textarea required class="w-422 font20 pad-18-21 custom-border ol-none cursor-p" name="description"
+            <textarea  class="w-422 font20 pad-18-21 custom-border ol-none cursor-p" name="description"
               id="description-input" cols="30" rows="10" placeholder="Enter a Description" maxlength="300"></textarea>
+              <div class="error-message d-none">This field is required</div>
           </div>
           <div class="top-seperator">
             <div class="seperator">
@@ -65,9 +68,10 @@
             </div>
           </div>
           <div class="top-right">
-            <label required class="font20 date-label label" for="date">Due date</label>
+            <label  class="font20 date-label label" for="date">Due date</label>
             <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none cursor-p" type="date"
               placeholder="dd/mm/yyyy">
+              <div class="error-message d-none">This field is required</div>
             <label class="font20 label prio-label" for="prio">Prio</label>
             <div class="prio-btn">
               <button id="urgentBtn" onclick="getTaskPrio(this, 'urgent')"
