added password validation login

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               class="input-icons"
             />
           </div>
+          <div class="error-message d-none">Ups! your password don’t match</div>
           <div class="checkbox-container">
             <div class="remember-me-container">
               <input
