--- a/addtask.html
+++ b/addtask.html
@@ -88,7 +88,7 @@
         </div>
         <div class="bottom-section">
           <div class="bottom-left">
-            <label id="" class="font20 label" for="category">Category</label>
+            <label id="category-label" class="font20 label" for="category">Category</label>
             <div onclick="toggleCategoryMenu()" class="category-container font20" id="category-container">
               <div class="category-input cursor-p" id="category-input">
                 <span>Select task category</span>
