--- a/help.html
+++ b/help.html
@@ -35,15 +35,15 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <!-- FAVICON END -->
-    <link rel="stylesheet" href="styles/styleSidebar.css" />
-    <link rel="stylesheet" href="styles/fonts.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/help.css" />
-    <link rel="stylesheet" href="styles/bootstrap.css" />
+    <link rel="stylesheet" href="./styles/styleSidebar.css" />
+    <link rel="stylesheet" href="./styles/fonts.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/help.css" />
+    <link rel="stylesheet" href="./styles/bootstrap.css" />
     <script defer src="./scripts/help.js"></script>
     <script defer src="./scripts/utils.js"></script>
-    <script defer src="scripts/sidebar.js"></script>
-    <script defer src="scripts/storage.js"></script>
+    <script defer src="./scripts/sidebar.js"></script>
+    <script defer src="./scripts/storage.js"></script>
   </head>
 
   <body onload="initHelp()">
