--- a/board.html
+++ b/board.html
@@ -213,7 +213,7 @@
       </div>
       <div class="grid-items">
         <div class="d-flex justify-content-between">
-          <div class="bold boardCategoryHeadline">In Progress</div>
+          <div class="bold boardCategoryHeadline" id="inProgressText">In Progress</div>
           <div class="cursorPointer">
             <svg class="plusButton" onclick="addTaskByStatus('in progress')" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M12 8.5V16.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round"/>
@@ -227,7 +227,7 @@
       </div>
       <div class="grid-items">
         <div class="d-flex justify-content-between">
-          <div class="bold boardCategoryHeadline">Awaiting Feedback</div>
+          <div class="bold boardCategoryHeadline" id="awaitingFeedbackText">Awaiting Feedback</div>
           <div class="cursorPointer">
             <svg class="plusButton" onclick="addTaskByStatus('awaiting feedback')" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M12 8.5V16.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round"/>
